--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   country_code_picker: ^3.0.0
+  firebase_core: ^3.1.0
+  google_maps_flutter: ^2.6.1
+  flutter_polyline_points: ^2.0.0
+  location: ^6.0.2
+  firebase_auth: ^5.1.0
+  provider: ^6.1.2
+  intl_phone_field: ^3.2.0
+  google_sign_in: ^6.2.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
