--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
