--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
 
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.android.play:integrity:1.3.0'
+    implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
+    implementation("com.google.firebase:firebase-auth")
 }
