--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
   geocoding: ^3.0.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
